Changes in 2.1.8:
  o Bug Fixes:
    * Added abort-on-error to conary rollback command which causes rollback
      be aborted if any pre scripts fail. (CNY-3327)
    * Fixed bug introduced in Conary 2.1.0 which caused conary to ignore
      ownership differences for executable files. (CNY-3354)
    * When SetModes() is called twice, honor the last invocation with
      regard to setuid and setgid, including if neither setuid nor
      setgid is set.  Also, make it possible to override setuid and
      setgid bits in a derived package. (CNY-3344)
    * Fixed a bug in Conary 2.1.0 which caused updates to fail
      because a temporary table persisted across jobs. (CNY-3339)
    * Changed default behavior of imageGroup flag in group recipes so that
      checkOnlyByDefaultDeps is now set to True (CNY-3356)

Changes in 2.1.7:
  o New Features:
    * Conary now allows configuration files that appear to be encoded
      in Windows Code Page 1252 if they do not have other specific
      characteristics of binary files. (CNY-3353)

  o Bug Fixes:
    * CheckinCallback was moved from cvc.py to commit.py, in order to
      prevent the conary package from depending on conary-build.
      (CNY-3314)
    * Zero epochs are no longer stored as NULL in the troveInfo.
      (CNY-3350)
    * A file descriptor leak caused by a circular dependency in the
      update code has been fixed. (CNY-3352)

Changes in 2.1.6:
  o Bug Fixes:
    * A bug in the getChangeSetFingerprints call that resulted in
      fingerprints different from those calculated by Conary proxies has
      been corrected.
    * Rollbacks no longer fail if a file type changed before and after
      the relevant update has been appliend. (CNY-3340)
    * Ghost files that are part of rpm capsules are marked as being part
      of the changeset (as opposed to being included in the capsule).
      The proxy code that injects contents was made aware of that, to
      avoid creating incomplete changesets. (CNY-3346)
